Dark mode style fixed

--- a/ui/packages/app/web/src/style/react-select.css
+++ b/ui/packages/app/web/src/style/react-select.css
@@ -1,7 +1,7 @@
 .dark .parca-select-container,
 .dark .parca-select__control,
 .dark .parca-select__menu {
-  background: #000 !important;
+  background: #111827 !important;
 }
 
 .dark .parca-select__control {
